# bids_qc

./: .gitignore  Dockerfile  README.md  index.csv  pyproject.toml  requirements.txt  run.py  setup.py  test.py
.github/workflows/: workflow.yml
.temp_qc/csv/: sub-PA001_ses-V1W1_results.csv
BIDSqc/: cli.py  main.py  utils.py
BIDSqc/config/: overlay.csv
CPACqc/: __init__.py  cli.py  main.py  utils.py
CPACqc/core/: QCPipeline.py  config.py  entity.py  main.py  utils.py
CPACqc/overlay/: overlay.csv
CPACqc/report/: pdf.py
CPACqc/services/: multiprocessing_service.py  plotting_service.py
CPACqc/table/: table.py  utils.py
CPACqc/templates/: index.html
CPACqc/ui/: cli.py
CPACqc/utils/multiprocessing/: multiprocessing_utils.py
CPACqc/utils/plotting/: nii_plotter.py  plot.py
CPACqc/utils/report/: pdf.py
CPACqc/utils/tabler/: bids2table.py
CPACqc/utils/tabler/custom_bids2table/: __main__.py  _b2t.py  table.py
CPACqc/utils/tabler/custom_bids2table/extractors/: bids.py  image.py  inheritance.py  metadata.py
bids_qc/: cli.py  main.py  plot.py  utils.py
bidsqc/: cli.py  main.py  utils.py
qc/: nii_gz_files.csv
